--- a/bookHunter.html
+++ b/bookHunter.html
@@ -49,7 +49,27 @@
             <div class="board">
                 <div class="demo">demo</div>
                 <p>
-                    - Виноват, - мягко отозвался неизвестный, - для того, чтобы управлять, нужно, как-никак, иметь точный план на некоторый, хоть сколько-нибудь приличный срок. Позвольте же вас спросить, как же может управлять человек, если он не только лишен возможности составить какой-нибудь план хотя бы на смехотворно короткий срок, ну, лет, скажем, в тысячу, но не может ручаться даже за свой собственный завтрашний день? И, в самом деле, - тут неизвестный повернулся к Берлиозу, - вообразите, что вы, например, начнете управлять, распоряжаться и другими и собою, вообще, так сказать, входить во вкус, и вдруг у вас... кхе... кхе... саркома легкого... - тут иностранец сладко усмехнулся, как будто мысль о саркоме легкого доставила ему удовольствие, - да, саркома, - жмурясь, как кот, повторил он звучное слово, - и вот ваше управление закончилось! Ничья судьба, кроме своей собственной, вас более не интересует. Родные вам начинают лгать, вы, чуя неладное, бросаетесь к ученым врачам, затем к шарлатанам, а бывает, и к гадалкам. Как первое и второе, так и третье - совершенно бессмысленно, вы сами понимаете. И все это кончается трагически: тот, кто еще недавно полагал, что он чем-то управляет, оказывается вдруг лежащим неподвижно в деревянном ящике, и окружающие, понимая, что толку от лежащего нет более никакого, сжигают его в печи. А бывает и еще хуже: только что человек соберется съездить в Кисловодск, - тут иностранец прищурился на Берлиоза, - пустяковое, казалось бы, дело, но и этого совершить не может, потому что неизвестно почему вдруг возьмет - поскользнется и попадет под трамвай! Неужели вы скажете, что это он сам собою управил так? Не правильнее ли думать, что управился с ним кто-то совсем другой? - и здесь незнакомец рассмеялся странным смешком.
+                    Берлиоз говорил, а сам в это время думал: «Но, все-таки, кто же он такой? И почему он так хорошо говорит по-русски?»
+
+                    – Взять бы этого Канта, да за такие доказательства года на три в Соловки! – совершенно неожиданно бухнул Иван Николаевич.
+
+                    – Иван! – сконфузившись, шепнул Берлиоз. Но предложение отправить Канта в Соловки не только не поразило иностранца, но даже привело в восторг.
+
+                    – Именно, именно, – закричал он, и левый зеленый глаз его, обращенный к Берлиозу, засверкал, – ему там самое место! Ведь говорил я ему тогда за завтраком: «Вы профессор, воля ваша, что-то нескладное придумали! Оно, может, и умно, но больно непонятно. Над вами потешаться будут»
+
+                    Берлиоз выпучил глаза. «За завтраком… Канту? Что это он плетет?» – подумал он.
+
+                    – Но, – продолжал иноземец, не смущаясь изумлением Берлиоза и обращаясь к поэту, – отправить его в Соловки невозможно по той причине, что он уже с лишком сто лет пребывает в местах значительно более отдаленных, чем Соловки, и извлечь его оттуда никоим образом нельзя, уверяю вас!
+
+                    – А жаль! – отозвался поэт-задира.
+
+                    – И мне жаль! – подтвердил неизвестный, сверкая глазом, и продолжал: – Но вот какой вопрос меня беспокоит: ежели бога нет, то, спрашивается, кто же управляет жизнью человеческой и всем вообще распорядком на земле?
+
+                    – Сам человек и управляет, – поспешил сердито ответить Бездомный на этот, признаться, не очень ясный вопрос.
+
+                    – Виноват, – мягко отозвался неизвестный, – для того, чтобы управлять, нужно, как-никак, иметь точный план на некоторый, хоть сколько-нибудь приличный срок. Позвольте же вас спросить, как же может управлять человек, если он не только лишен возможности составить какой-нибудь план хотя бы на смехотворно короткий срок, ну скажем, в тысячу, но не может ручаться даже за свой завтрашний день? И, в самом деле, – тут неизвестный обернулся к Берлиозу, – вообразите, что вы, например, начнете управлять, распоряжаться и другими и собою, вообще, так сказать входить во вкус, и вдруг у вас… кхе… кхе… саркома легкого… – тут иностранец сладко улыбнулся, как будто мысль о саркоме легкого доставила ему удовольствие, – да, саркома, – жмурясь, как кот, повторил он звучное слово, – и вот ваше управление закончилось! Ничья судьба, кроме своей собственной, вас более не интересует. Родные вам начинают лгать, вы, чуя, неладное, бросаетесь к ученым врачам, затем к шарлатанам, а бывает и к гадалкам. Как первое и второе, так и третье – совершенно бессмысленно, вы сами понимаете. И все это кончается трагически: тот, кто еще недавно полагал, что он чем-то управляет, оказывается вдруг лежащим неподвижно в деревянном ящике, и окружающие, понимая, что толку от лежащего нет более никакого, сжигают его в печи. А бывает еще хуже: только что человек соберется съездить в Кисловодск – тут иностранец прищурился на Берлиоза, – пустяковое, казалось бы, дело, но и этого совершить не может, потому что неизвестно почему вдруг возьмет – поскользнется и попадет под трамвай! Неужели вы скажете, что это он сам собою управил, так? Не правильнее ли думать, что управился с ним кто-то совсем другой? – и здесь незнакомец рассмеялся странным смешком.
+
+                    Берлиоз с великим вниманием слушал неприятный рассказ про саркому и трамвай, и какие-то тревожные мысли начали мучить его. «Он не иностранец! Он не иностранец! – думал он, – он престранный субъект… но позвольте, кто же он такой?»
                 </p>
             </div>
             <div class="market">
