--- a/bookHunter.html
+++ b/bookHunter.html
@@ -5,8 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styleBookHunter.css">
-    <title>Book Hunter</title>
+    <title>BKEY.COM</title>
 </head>
 <body>
     <header class="header">
@@ -19,7 +22,7 @@
     </header>
     <div class="cunteiner">
         <div class="parallaxStartBox">
-            <div class="textParallax"><span>BookHunter</span></div>
+            <div class="textParallax">Boo<span>k</span>ey</div>
             <div class="instructionText"><span>Попробуй угадать фамилию писателя и получи приятный бонус</span></div>
             <div class="sayYX"></div>
             <img src="star.png" class="star1 star">
@@ -37,7 +40,6 @@
             </div>
             <div class="window">1</div>
         </div>
-        <div class="instructionBox"></div>
         <div class="firstBlocks">
             <div class="market">
                 <a href="https://www.eldorado.ru/cat/detail/ultrabuk-huawei-matebook-d-15-8-256gb-space-grey-bob-wai9/"><img src="maImg.png" alt="" class="market_img"></a>
